Test cleanup.